# ethsnarks-examples

./: .gitignore  .gitmodules  Makefile  README.md
circuit/: CMakeLists.txt  sha256_preimage.cpp  sha256_preimage.hpp  sha256_preimage_cli.cpp
circuit/longsightl/: CMakeLists.txt
circuit/sha256/: CMakeLists.txt  sha256_preimage.cpp
circuit/sha256/test/: CMakeLists.txt  test_sha256_preimage.cpp
solidity/: .gitignore  package.json
solidity/contracts/: TestableVerifier.sol
solidity/migrations/: 2_deploy_contrcts.js
solidity/test/: TestVerifier.js
